--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     </div>
 
                     <button type="button" class="btn-guardar btn btn-primary">Guardar Pedido</button>
+                    <button type="button" class="d-none btn-actualizar btn btn-success">Actualizar pedido</button>
                     </form>
             </div>
             <div class="col-7">
