--- a/index.html
+++ b/index.html
@@ -49,9 +49,16 @@
             </div>
             
             <div class="col-md-7 mt-4">
+                <!-- 🔍 Buscador -->
                 <div class="mb-3">
                     <input type="text" class="form-control buscador" placeholder="Buscar por cliente o producto...">
                 </div>
+
+                <!-- 📄 Botón Exportar -->
+                <div class="mb-3 d-flex justify-content-end">
+                    <button type="button" class="btn btn-danger btn-exportar">Exportar PDF</button>
+                </div>
+
                 <table class="table">
                     <thead>
                         <tr>
@@ -71,6 +78,10 @@
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <!-- Librerías para exportar PDF -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+    <!-- Tu JS principal -->
     <script src="localStorage.js"></script>
 </body>
 </html>
